updated main window

--- a/Capstone/Capstone/MainWindow.xaml
+++ b/Capstone/Capstone/MainWindow.xaml
@@ -77,8 +77,10 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
+
+
                     <StackPanel Orientation="Horizontal" 
-                        Grid.Row="1"
+                        Grid.Row="1" Margin="10,0"
                         HorizontalAlignment="Stretch" VerticalAlignment="Top" Background="{DynamicResource BackgroundColor}">
                         <materialDesign:PackIcon Kind="Magnify" 
                                          VerticalAlignment="Center" 
@@ -100,11 +102,36 @@
                        Margin="0,50,0,0"/>
 
 
-                    <ScrollViewer Grid.Row="2" Background="{DynamicResource BackgroundColor}">
+                    <Grid Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Opacity=".15">
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 31.173,144.060 C 31.253,141.720 26.334,140.052 23.311,141.265 C 22.633,143.001 21.876,149.281 22.861,151.547 C 23.311,152.532 27.848,148.826 28.981,147.995 C 30.040,147.163 31.099,145.273 31.173,144.060 Z M 22.633,159.490 C 21.193,160.925 21.574,165.007 21.347,167.580 C 21.119,170.302 20.743,173.251 21.574,175.289 C 25.730,176.502 33.217,173.479 33.901,170.074 C 35.182,164.028 27.319,158.579 22.633,159.490 Z M 38.359,157.901 C 41.080,160.697 43.426,166.066 42.219,170.677 C 39.492,180.886 28.378,183.989 18.625,183.460 C 15.824,183.306 12.954,182.702 12.123,180.436 C 12.345,173.707 12.874,166.823 13.558,158.351 C 14.013,152.532 14.235,142.250 16.051,136.727 C 17.868,134.153 24.899,133.476 29.665,133.852 C 34.350,134.307 39.646,137.712 40.101,141.191 C 40.403,144.214 38.433,146.480 37.072,148.222 C 35.483,150.340 33.821,151.319 32.614,153.739 C 34.578,155.931 36.696,156.159 38.359,157.901 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 54.860,158.351 C 54.256,164.329 51.609,177.032 60.383,175.067 C 63.406,174.612 65.450,167.654 65.826,163.498 C 66.127,160.167 65.598,154.041 66.201,151.547 C 66.811,149.281 70.511,148.524 71.872,149.355 C 74.070,150.642 74.218,156.990 74.144,160.623 C 74.070,163.646 73.614,167.051 72.709,170.148 C 70.290,178.694 65.980,184.063 54.860,182.247 C 50.778,181.268 47.071,178.546 46.394,172.949 C 46.092,170.376 46.166,165.161 46.240,162.889 C 46.542,157.070 47.145,151.473 53.727,151.775 C 55.771,153.062 55.161,156.011 54.860,158.351 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 91.402,174.538 C 97.221,175.745 98.052,173.928 98.360,164.249 C 98.360,160.998 98.360,157.901 98.052,156.688 C 96.771,156.387 94.499,156.011 93.440,156.387 C 87.394,158.431 80.584,172.494 91.402,174.538 Z M 81.569,193.668 C 83.386,194.044 85.276,195.860 88.527,195.632 C 90.115,195.558 92.535,193.594 93.440,192.455 C 95.558,189.204 96.771,186.181 96.617,182.099 C 94.352,181.717 91.248,182.099 89.512,181.871 C 86.784,181.643 83.989,180.283 82.099,178.768 C 77.186,174.840 76.958,166.521 79.531,160.167 C 82.401,152.834 91.021,147.995 98.508,148.672 C 99.942,148.826 104.634,149.583 105.767,150.716 C 106.900,151.701 106.900,156.011 106.752,157.674 C 106.370,163.418 106.223,168.867 105.767,174.538 C 105.311,178.694 105.311,182.702 104.406,186.409 C 103.501,190.189 102.670,192.006 101.155,194.801 C 99.339,198.052 95.940,201.229 92.381,202.590 C 88.681,204.024 85.202,203.723 81.422,201.986 C 78.922,200.854 77.032,198.582 77.561,196.390 C 78.245,193.668 80.209,193.366 81.569,193.668 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 124.466,174.538 C 130.285,175.745 131.116,173.928 131.424,164.249 C 131.424,160.998 131.424,157.901 131.116,156.688 C 129.835,156.387 127.563,156.011 126.504,156.387 C 120.458,158.431 113.648,172.494 124.466,174.538 Z M 114.633,193.668 C 116.450,194.044 118.340,195.860 121.591,195.632 C 123.179,195.558 125.599,193.594 126.504,192.455 C 128.622,189.204 129.835,186.181 129.681,182.099 C 127.415,181.717 124.312,182.099 122.576,181.871 C 119.848,181.643 117.053,180.283 115.163,178.768 C 110.249,174.840 110.021,166.521 112.595,160.167 C 115.464,152.834 124.084,147.995 131.571,148.672 C 133.006,148.826 137.698,149.583 138.831,150.716 C 139.964,151.701 139.964,156.011 139.816,157.674 C 139.434,163.418 139.286,168.867 138.831,174.538 C 138.375,178.694 138.375,182.702 137.470,186.409 C 136.565,190.189 135.734,192.006 134.219,194.801 C 132.403,198.052 129.004,201.229 125.445,202.590 C 121.745,204.024 118.266,203.723 114.485,201.986 C 111.986,200.854 110.095,198.582 110.625,196.390 C 111.308,193.668 113.272,193.366 114.633,193.668 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 168.871,150.488 C 170.078,148.980 173.329,147.921 174.770,151.246 C 176.278,154.497 169.019,176.502 163.428,186.557 C 161.310,190.189 160.325,193.594 157.678,196.617 C 156.699,197.750 151.933,204.480 147.395,201.155 C 143.387,198.280 149.439,194.647 150.720,193.139 C 153.140,190.417 155.258,186.255 156.089,182.628 C 156.317,180.283 153.971,178.238 152.912,175.973 C 150.646,171.059 148.153,168.030 146.336,162.667 C 145.431,160.247 143.763,157.144 144.144,154.423 C 144.600,150.944 147.697,148.598 150.800,150.260 C 152.007,150.944 152.463,153.364 153.066,155.629 C 154.882,161.226 157.530,168.787 160.929,173.251 C 162.369,170.831 166.070,153.819 168.871,150.488 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 192.859,129.468 C 194.374,131.512 192.558,135.668 192.256,137.860 C 191.499,143.611 190.895,149.731 190.064,155.482 C 189.608,158.505 189.307,161.682 188.100,163.270 C 186.511,165.462 180.539,167.426 179.480,163.344 C 178.723,160.623 180.539,156.688 181.216,152.680 C 181.746,149.429 182.577,144.891 182.959,141.942 C 183.636,136.653 182.731,130.453 187.490,128.864 C 188.931,128.409 191.954,128.181 192.859,129.468 Z M 186.056,183.306 C 183.864,186.637 176.679,185.953 176.832,181.415 C 176.906,178.620 179.554,178.017 182.121,177.561 C 185.908,176.878 188.174,180.055 186.056,183.306 Z"/>
+
+                        <!-- Layer 1/<Group>/<Group>/<Compound Path> -->
+                        <Path Fill="#ffffff" Data="F1 M 146.601,126.681 C 146.551,122.871 143.400,119.832 139.590,119.920 C 135.786,120.008 132.816,123.165 132.921,127.010 C 133.023,130.708 136.043,133.610 139.782,133.601 C 143.635,133.592 146.652,130.531 146.601,126.681 Z M 73.631,126.795 C 73.651,123.014 70.519,119.889 66.725,119.906 C 63.046,119.922 60.017,122.922 59.953,126.613 C 59.886,130.495 62.831,133.554 66.683,133.604 C 70.528,133.654 73.610,130.634 73.631,126.795 Z M 81.031,66.350 C 73.259,66.350 65.735,66.350 57.969,66.350 C 59.518,72.895 60.983,79.199 62.541,85.480 C 62.680,86.040 63.412,86.861 63.879,86.868 C 70.058,86.961 76.239,86.930 82.653,86.930 C 82.095,79.846 81.566,73.144 81.031,66.350 Z M 149.242,66.281 C 141.385,66.281 133.901,66.281 126.157,66.281 C 125.610,73.164 125.073,79.933 124.516,86.936 C 130.978,86.936 136.996,86.973 143.011,86.874 C 143.568,86.865 144.462,86.079 144.607,85.504 C 146.192,79.230 147.659,72.926 149.242,66.281 Z M 93.582,86.717 C 100.411,86.717 106.929,86.717 113.591,86.717 C 114.133,79.804 114.659,73.109 115.190,66.347 C 107.246,66.347 99.696,66.347 91.993,66.347 C 92.527,73.196 93.045,79.834 93.582,86.717 Z M 80.161,55.178 C 79.584,48.044 79.042,41.335 78.500,34.630 C 69.013,34.630 59.820,34.630 50.387,34.630 C 51.961,41.203 53.435,47.508 55.030,53.781 C 55.175,54.348 56.096,55.112 56.664,55.119 C 64.349,55.207 72.035,55.178 80.161,55.178 Z M 156.795,34.560 C 147.328,34.560 138.120,34.560 128.660,34.560 C 128.127,41.459 127.604,48.210 127.065,55.183 C 135.165,55.183 142.837,55.213 150.508,55.124 C 151.084,55.118 152.022,54.363 152.164,53.798 C 153.766,47.457 155.245,41.086 156.795,34.560 Z M 117.709,34.590 C 108.086,34.590 98.878,34.590 89.446,34.590 C 90.002,41.507 90.541,48.207 91.088,55.017 C 99.521,55.017 107.708,55.017 116.106,55.017 C 116.644,48.163 117.169,41.467 117.709,34.590 Z M 65.816,97.902 C 65.747,98.372 65.665,98.566 65.702,98.734 C 67.579,107.220 67.395,109.209 77.959,109.093 C 98.645,108.866 119.336,108.988 140.025,109.053 C 147.671,109.077 154.317,114.057 156.629,121.191 C 159.014,128.553 156.522,136.427 150.346,141.043 C 144.410,145.479 136.212,145.710 129.994,141.615 C 123.698,137.471 120.788,130.003 122.515,122.408 C 122.674,121.710 122.871,121.021 123.116,120.075 C 109.781,120.075 96.697,120.075 83.584,120.075 C 85.694,132.097 82.007,140.082 72.888,143.469 C 64.982,146.405 55.980,143.237 51.588,135.973 C 46.563,127.661 48.629,119.330 57.507,111.359 C 52.569,90.692 47.659,70.174 42.764,49.653 C 40.122,38.572 37.511,27.484 34.873,16.403 C 33.766,11.751 32.827,11.025 27.995,11.020 C 22.614,11.013 17.232,11.044 11.852,11.007 C 8.177,10.983 5.686,8.812 5.621,5.684 C 5.553,2.401 8.050,0.083 11.851,0.054 C 17.881,0.008 23.913,-0.047 29.941,0.071 C 37.490,0.219 43.167,4.842 44.999,12.134 C 45.721,15.008 46.612,17.861 47.042,20.781 C 47.384,23.103 48.490,23.480 50.575,23.476 C 78.129,23.413 105.683,23.434 133.238,23.434 C 142.886,23.434 152.535,23.419 162.184,23.438 C 167.846,23.450 169.989,26.104 168.699,31.548 C 163.853,52.004 158.984,72.455 154.116,92.905 C 153.258,96.508 151.442,97.895 147.537,97.896 C 121.374,97.905 95.212,97.902 69.049,97.902 C 67.957,97.902 66.866,97.902 65.816,97.902 Z"/>
+
+                    </Grid>
+
+                    <!--Background="{DynamicResource BackgroundColor}"-->
+                    <ScrollViewer Grid.Row="2" Background="Transparent">
                         <ListBox x:Name="ProductsList" ItemsSource="{Binding Products}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid HorizontalAlignment="Stretch">
+                                    <Grid HorizontalAlignment="Stretch" ToolTip="{Binding Name}">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="Auto"/>
@@ -112,26 +139,27 @@
                                         </Grid.RowDefinitions>
 
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="500"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <TextBlock Text="{Binding Name}" FontWeight="Bold" Grid.Row="0"
-                                           TextWrapping="Wrap" FontSize="15"/>
-                                        <TextBlock Text="{Binding Description}" Grid.Row="1"/>
-                                        <TextBlock Text="{Binding Price}" Grid.Row="2" 
+                                        <TextBlock Grid.Column="1" Text="{Binding Name}"
+                                                   TextTrimming="CharacterEllipsis" FontWeight="Bold" Grid.Row="0"
+                                           TextWrapping="NoWrap" FontSize="15"/>
+                                        <TextBlock  Grid.Column="1" FontSize="12" Text="{Binding Description}" Grid.Row="1"/>
+                                        <TextBlock  Grid.Column="1" Text="{Binding Price}" Grid.Row="2" 
                                            FontStyle="Italic" Foreground="{DynamicResource PriceColor}" FontWeight="DemiBold"/>
 
 
-                                        <Button Grid.RowSpan="3" Grid.Column="1" 
+                                        <Button Grid.RowSpan="3" Grid.Column="0" 
                                                 HorizontalAlignment="Right"
                                                 Tag="{Binding}" Click="SaveItem"
                                             Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
                                             ToolTip="Save" Background="Transparent" BorderBrush="Transparent">
                                             <materialDesign:PackIcon
                                                 Background="Transparent"
-                                                Foreground="{DynamicResource PriceColor}"
-                                                Kind="Bookmark" Width="15" Height="15"/>
+                                                Foreground="Gray"
+                                                Kind="Bookmark" Width="20" Height="20"/>
                                         </Button
 >
                                     </Grid>
@@ -139,15 +167,10 @@
                             </ListBox.ItemTemplate>
                         </ListBox>
                     </ScrollViewer>
-                    <!-- This is the xaml for the settings Button. I tried using a Menu instead (below the commented lines)
-            <Button x:Name="SearchOptionsButton" HorizontalAlignment="Left" Margin="189,10,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" BorderBrush="#FFEAEAEA" Background="#FF3E3E3E" Foreground="#DDFFFFFF" Width="145">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="ClipboardFlow" Foreground="White"/>
-                    <Label Content="Search Options" Height="19" FontSize="12" VerticalAlignment="Bottom"/>
-                </StackPanel>
-            </Button> 
-            -->
-                    <Menu Grid.Row="1" VerticalAlignment="Top" Width="250" HorizontalAlignment="Left" Margin="180,0,0,0">
+
+
+
+                    <Menu Grid.Row="1" VerticalAlignment="Top" Width="250" HorizontalAlignment="Right" Margin="180,0,0,0">
                         <MenuItem Header="Search Options" Width="250">
                             <MenuItem Header="Show search options here" >
                                 <StackPanel Orientation="Horizontal">
